cleanup / minors / BP